data/derived/fa15/progs/unify/prog1620.ml.out
Characters 47-60:
  if n>=10 then digitsOfInt n;;
                ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
